# app.js
@@ -36,6 +36,7 @@ const userRoutes = require("./api/routes/user");
 const productRoutes = require("./api/routes/products");
 const languageRoutes = require("./api/routes/languages");
 const cmsPageRoutes = require("./api/routes/cms_pages");
+const menuLinksRoutes = require("./api/routes/menu_links");
 
 app.use(morgan("dev")); // it will log all the requests.
 app.use(bodyParser.urlencoded({ extended: false })); // it will handle request body
@@ -60,6 +61,7 @@ app.use("/user", userRoutes);
 app.use("/products", productRoutes);
 app.use("/languages", languageRoutes);
 app.use("/page-content", cmsPageRoutes);
+app.use("/menu-links", menuLinksRoutes);
 
 // //error handling
 app.use((req, res, next) => {
